sea-query-derive/tests/compile-fail/wrong_literal_type.stderr
error: Only string literals are permitted in this position
 --> $DIR/wrong_literal_type.rs:6:14
  |
6 |     #[iden = 123]
  |              ^^^
